@@ -96,6 +96,10 @@
       <pathelement path="${classes}/${mod-velocity-id}" />
       <pathelement path="${mod}/${mod-velocity-id}/src" />
 
+	  <path refid="mod-wadl-path" />
+      <pathelement path="${classes}/${mod-wadl-id}" />
+      <pathelement path="${mod}/${mod-wadl-id}/src" />
+
       <fileset dir="${lib}/${lib-collections-id}" includes="*.jar" />
       <fileset dir="${lib}/${lib-junit-id}" includes="*.jar" />
       <fileset dir="${lib}/${lib-lang-id}" includes="*.jar" />
@@ -236,6 +240,11 @@
       <fileset dir="${lib}/${lib-velocity-id}" includes="*.jar" />
    </path>
 
+   <path id="mod-wadl-path">
+      <path refid="mod-ri-path" />
+      <pathelement path="${classes}/${mod-ri-id}" />
+   </path>
+
    <path id="path-all">
       <pathelement path="${classes}/${mod-api-id}" />
       <pathelement path="${classes}/${mod-ri-id}" />
@@ -254,6 +263,7 @@
       <pathelement path="${classes}/${mod-servlet-id}" />
       <pathelement path="${classes}/${mod-spring-id}" />
       <pathelement path="${classes}/${mod-velocity-id}" />
+      <pathelement path="${classes}/${mod-wadl-id}" />
       <path refid="mod-fileupload-path" />
       <path refid="mod-freemarker-path" />
       <path refid="mod-grizzly-path" />
@@ -763,6 +773,7 @@
       <pomModule name="simple" />
       <pomModule name="spring" />
       <pomModule name="velocity" />
+      <pomModule name="wadl" />
       <pomModule name="example" />
 
       <pomLibrary name="simple"/>
@@ -792,7 +803,6 @@
       <replace file="${temp}/javadocs/overview-api.html" token="@version-minor@" value="${version-minor}" />
       <replace file="${temp}/javadocs/overview-nre.html" token="@version-minor@" value="${version-minor}" />
       <replace file="${temp}/javadocs/overview-ext.html" token="@version-minor@" value="${version-minor}" />
-
    </target>
    
    <!-- COMPILE target -->
@@ -823,6 +833,7 @@
       <compileModule name="simple" />
       <compileModule name="spring" />
       <compileModule name="velocity" />
+      <compileModule name="wadl" />
       <compileModule name="example" />
       <compileModule name="api-test" />
       <compileModule name="ri-test" />
@@ -849,6 +860,7 @@
       <backportModule name="simple" failonwarning="@{backport-failonwarning}"/>
       <backportModule name="spring" failonwarning="@{backport-failonwarning}"/>
       <backportModule name="velocity" failonwarning="@{backport-failonwarning}"/>
+      <backportModule name="wadl" failonwarning="@{backport-failonwarning}"/>
       <backportModule name="example" failonwarning="@{backport-failonwarning}"/>
       <backportModule name="api-test" failonwarning="@{backport-failonwarning}"/>
       <backportModule name="ri-test" failonwarning="@{backport-failonwarning}"/>
@@ -951,6 +963,7 @@
             <pathelement path="${mod}/${mod-simple-id}/src/" />
             <pathelement path="${mod}/${mod-spring-id}/src/" />
             <pathelement path="${mod}/${mod-velocity-id}/src/" />
+            <pathelement path="${mod}/${mod-wadl-id}/src/" />
          </sourcepath>
 
          <bottom>
@@ -1028,6 +1041,7 @@
       <findbugsModule name="simple" />
       <findbugsModule name="spring" />
       <findbugsModule name="velocity" />
+      <findbugsModule name="wadl" />
       <findbugsModule name="example" />
    </target>
      
@@ -1052,6 +1066,7 @@
       <checkstyleModule name="simple" />
       <checkstyleModule name="spring" />
       <checkstyleModule name="velocity" />
+      <checkstyleModule name="wadl" />
       <checkstyleModule name="example" />
    </target>
 
@@ -1148,6 +1163,7 @@
       <stageModule name="simple" />
       <stageModule name="spring" />
       <stageModule name="velocity" />
+      <stageModule name="wadl" />
       <stageModule name="example" />
 
       <!-- Copy the POM files -->
@@ -1177,6 +1193,7 @@
       <maven2Module name="simple" />
       <maven2Module name="spring" />
       <maven2Module name="velocity" />
+      <maven2Module name="wadl" />
       <maven2Library name="simple" />
       <maven2Library name="json" />
       <maven2Library name="db4o" />
