@@ -106,3 +106,7 @@ mod-velocity-package: org.restlet.ext.velocity
 mod-velocity-version: ${lib-velocity-version}
 mod-velocity-id: ${mod-velocity-package}_${mod-velocity-version}
 mod-velocity-maven-groupId: org.restlet
+   
+mod-wadl-package: org.restlet.ext.wadl
+mod-wadl-version: 1.0
+mod-wadl-id: ${mod-wadl-package}_${mod-wadl-version}
