@@ -1,0 +1,28 @@
+<project>
+   <modelVersion>4.0.0</modelVersion>
+   <groupId>@group-id@</groupId>
+   <artifactId>@artifact-id@</artifactId>
+   <version>@version@</version>
+   <dependencies>
+      <dependency>
+         <groupId>com.noelios.restlet</groupId>
+         <artifactId>com.noelios.restlet</artifactId>
+         <version>@version@</version>
+      </dependency>
+   </dependencies>
+
+   <name>WADL extension</name>
+   <description>Support WADL documents.</description>
+   <licenses>
+      <license>
+         <name>CDDL license</name>
+         <url>http://www.opensource.org/licenses/cddl1.php</url>
+      </license>
+      <license>
+         <name>GPL license</name>
+         <url>
+            http://www.opensource.org/licenses/gpl-license.php
+         </url>
+      </license>
+   </licenses>
+</project>
