@@ -1,0 +1,9 @@
+Manifest-Version: 1.0
+Bundle-ManifestVersion: 2
+Bundle-Name: Restlet Extension - WADL
+Bundle-SymbolicName: org.restlet.ext.wadl
+Bundle-Version: 1.0.0
+Bundle-Vendor: Noelios Consulting
+Require-Bundle: org.restlet;visibility:=reexport,
+ com.noelios.restlet
+Export-Package: org.restlet.ext.wadl
