@@ -1,0 +1,8 @@
+<HTML>
+<BODY>
+Integration with WADL specification.
+<p>
+@since 1.0
+@see <a href="https://wadl.dev.java.net/">Web Application Description Language (WADL)</a>
+</BODY>
+</HTML>
