@@ -1,0 +1,7 @@
+package org.restlet.test;
+
+import org.restlet.resource.Resource;
+
+public class NewsSearchResource extends Resource {
+
+}
